# linkage

./: .svnignore  ChangeLog  DBusAPI.md  FutureAndBeyond.md  Installation.md  Introduction.md  LICENSE  Makefile.am  ProjectHome.md  README  ReleaseProcess.md  RoadMap.md  TODO  VersionSystem.md  autogen.sh  configure.ac  configure.ac.in
branches/linkage-glade-gconf/: autogen.sh  configure.ac.in
branches/linkage-glade-gconf/data/: Makefile.am  groups.glade  linkage.glade  linkage.schemas  linkage.schemas.in  settings.glade
branches/linkage-glade-gconf/src/: AlignedFrame.hh  CellRendererProgressText.cc  CellRendererProgressText.hh  FileList.cc  FileList.hh  Group.cc  Group.hh  GroupList.cc  GroupList.hh  GroupView.cc  GroupView.hh  Makefile.am  PeerList.cc  PeerList.hh  PieceMap.cc  SettingsWin.cc  SettingsWin.hh  StateFilter.cc  StateFilter.hh  TorrentCreator.cc  TorrentList.cc  TorrentMenu.cc  TorrentMenu.hh  UI.cc  main.cc
data/: Makefile.am  linkage.desktop.in  linkage.glade  linkage.schemas  linkage.schemas.in  settings.glade
lib/: AlertManager.cc  DbusManager.cc  DetailsIface.cc  Engine.cc  InterfaceAdaptor.cc  MainIface.cc  Makefile.am  Makefile.in  Plugin.cc  PluginManager.cc  SessionManager.cc  SettingsManager.cc  Torrent.cc  TorrentAdaptor.cc  TorrentManager.cc  TorrentMenuIface.cc  Utils.cc  dbus-c.c
lib/gtkmm_extra/: keyfile.h
lib/linkage/: AlertManager.hh  DBusAdaptorGlue.hh  DBusProxyGlue.hh  DbusManager.hh  DetailsIface.hh  Engine.hh  Interface.hh  MainIface.hh  Makefile.am  Makefile.in  Plugin.hh  PluginManager.hh  RefCounter.hh  SessionManager.hh  SettingsManager.hh  Torrent.hh  TorrentManager.hh  Utils.hh  WeakPtr.hh  dbus-c.h
m4/: geoip.m4
plugins/: Makefile.am
plugins/notification/: Makefile.am  Makefile.in  PluginNotification.cc  PluginNotification.hh
plugins/scheduler/: Makefile.am  PluginScheduler.hh  ScheduleWin.cc
plugins/trayicon/: Makefile.am  PluginTrayIcon.cc  PluginTrayIcon.hh  eggtrayicon.c
plugins/upnp/: Makefile.am  PluginUPnP.cc  PluginUPnP.hh  UPnPManager.cc  UPnPManager.hh
po/: POTFILES.in  linkage.pot  ru.po  sv.po
src/: AddDialog.cc  AddDialog.hh  Alert.cc  AlignedFrame.cc  AlignedLabel.cc  AlignedLabel.hh  CellRendererPieceMap.cc  CellRendererPieceMap.hh  CellRendererProgressText.cc  CellRendererProgressText.hh  FileList.cc  FileList.hh  FilterManager.cc  FilterManager.hh  FilterRow.cc  FilterRow.hh  Group.cc  Group.hh  GroupFilter.cc  GroupFilter.hh  GroupFilterRow.cc  GroupFilterRow.hh  GroupFilterView.cc  GroupFilterView.hh  GroupList.cc  GroupRow.cc  GroupView.cc  GroupView.hh  GroupsWin.cc  GroupsWin.hh  IOManager.cc  Loader.hh  Makefile.am  Makefile.in  Menu.cc  PeerList.cc  PeerList.hh  PieceMap.cc  PieceMap.hh  SettingsWidget.cc  (+17 more)
tags/linkage-0.1.2/: autogen.sh  configure.ac
tags/linkage-0.1.2/data/: Makefile.am  linkage.desktop
tags/linkage-0.1.2/lib/: DbusManager.cc  Engine.cc  Makefile.am
tags/linkage-0.1.2/lib/linkage/: Makefile.am  RefCounter.hh
tags/linkage-0.1.2/plugins/: Makefile.am
tags/linkage-0.1.2/plugins/notification/: PluginNotification.hh
tags/linkage-0.1.2/plugins/upnp/: Makefile.am  UPnPManager.cc
tags/linkage-0.1.2/src/: AlignedSpinButton.hh  ExpanderButton.hh  GroupList.cc  GroupRow.hh  PeerList.cc  PeerList.hh  PieceMap.hh  SettingsWin.cc  Statusbar.cc  TorrentCreator.hh  UI.hh  main.cc
tags/linkage-0.1.4/: TODO  configure.ac
tags/linkage-0.1.5/: TODO  autogen.sh
tags/linkage-0.1.5/data/: Makefile.am  linkage.schemas.in
tags/linkage-0.2.0/: configure.ac
tags/linkage-0.2.0/lib/linkage/: Makefile.am  Plugin.hh  Torrent.hh  TorrentManager.hh  Utils.hh
tags/linkage-0.2.0/plugins/ipfilter/: IpFilterPlugin.cc  IpFilterPlugin.hh  Makefile.am
tags/linkage-0.2.0/plugins/ipfilter/libp2p/src/: list.cpp  stdafx.h  utf8.h
trunk/: .svnignore  AUTHORS  ChangeLog  README  TODO  autogen.sh  configure.ac  configure.ac.in
trunk/data/: Makefile.am  Makefile.in  groups.glade  linkage.desktop  linkage.desktop.in  linkage.glade  linkage.schemas  linkage.schemas.in  settings.glade
trunk/data/flags/: FLAGS_LICENCE  Makefile.am  Makefile.in
trunk/lib/: AlertManager.cc  DbusManager.cc  DetailsIface.cc  Engine.cc  Interface.cc  MainIface.cc  Makefile.am  Plugin.cc  PluginManager.cc  SessionManager.cc  SettingsManager.cc  Torrent.cc  TorrentManager.cc  TorrentMenuIface.cc  Utils.cc  dbus-c.c
trunk/lib/linkage/: AlertManager.hh  DBusAdaptorGlue.hh  DbusManager.hh  DetailsIface.hh  Engine.hh  Interface.hh  MainIface.hh  Makefile.am  Plugin.hh  PluginManager.hh  SessionManager.hh  SettingsManager.hh  Torrent.hh  TorrentManager.hh  TorrentMenuIface.hh  Utils.hh  dbus-c.h
trunk/m4/: geoip.m4  libnotify.m4  sizeof.m4
trunk/plugins/: Makefile.am  Makefile.in
trunk/plugins/ipfilter/: IpFilterPlugin.cc  Makefile.am
trunk/plugins/ipfilter/libp2p/src/: list_p2b.cpp
trunk/plugins/notification/: Makefile.am  PluginNotification.cc  PluginNotification.hh
trunk/plugins/scheduler/: PluginScheduler.cc  scheduler.glade
trunk/plugins/trayicon/: .svnignore  Makefile.am  Makefile.in  PluginTrayIcon.cc  PluginTrayIcon.hh  eggtrayicon.h
trunk/plugins/upnp/: Makefile.am  PluginUPnP.cc  PluginUPnP.hh  UPnPManager.cc  UPnPManager.hh
trunk/po/: LINGUAS  POTFILES.in  ru.po  sv.po
trunk/src/: AddDialog.cc  AddDialog.hh  Alert.hh  AlignedLabel.hh  AlignedSpinButton.cc  CellRendererPieceMap.cc  CellRendererPieceMap.hh  CellRendererProgressText.cc  EditColumnsDialog.cc  ExpanderButton.cc  FileList.cc  FileList.hh  Group.cc  Group.hh  GroupFilter.cc  GroupFilter.hh  GroupFilterRow.cc  GroupFilterRow.hh  GroupFilterView.hh  GroupList.cc  GroupList.hh  GroupRow.cc  GroupsWin.cc  IOManager.cc  IOManager.hh  Loader.cc  Loader.hh  Makefile.am  Menu.cc  PeerList.cc  PeerList.hh  PieceMap.cc  PieceMap.hh  SessionClient.hh  SettingsWidget.cc  SettingsWidget.hh  SettingsWin.cc  SettingsWin.hh  SimpleFileList.cc  StateFilter.cc  (+12 more)
wiki/: DBusAPI.wiki  FutureAndBeyond.wiki  Installation.wiki  Introduction.wiki  ReleaseProcess.wiki  RoadMap.wiki  VersionSystem.wiki  ZeroPointOnePointSix.wiki
(+126 files in other folders)
