AC_INIT(src/main.cc)

PACKAGE=linkage
VERSION=0.19

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

sinclude([m4/geoip.m4])
sinclude([m4/libnotify.m4])
sinclude([m4/libcurl.m4])

CHECK_GEOIP

CHECK_LIBNOTIFY

LIBCURL_CHECK_CONFIG

GTKMM_REQUIRED_VERSION=2.6
PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= $GTKMM_REQUIRED_VERSION)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

LIBTORRENT_REQUIRED_VERSION=0.10
PKG_CHECK_MODULES(LIBTORRENT, libtorrent >= $LIBTORRENT_REQUIRED_VERSION)
AC_SUBST(LIBTORRENT_CFLAGS)
AC_SUBST(LIBTORRENT_LIBS)

LIBNOTIFY_REQUIRED_VERSION=0.4.2
PKG_CHECK_MODULES(LIBNOTIFY, libnotify >= $LIBNOTIFY_REQUIRED_VERSION)
AC_SUBST(LIBNOTIFY_CFLAGS)
AC_SUBST(LIBNOTIFY_LIBS)

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile plugins/Makefile lib/Makefile lib/linkage/Makefile plugins/notification/Makefile plugins/trayicon/Makefile  data/Makefile data/flags/Makefile)
