AC_INIT(src/main.cc)

PACKAGE=linkage
VERSION=0.1.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

sinclude([m4/geoip.m4])

CHECK_GEOIP

PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.10)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

PKG_CHECK_MODULES(LIBTORRENT, libtorrent >= 0.11)
AC_SUBST(LIBTORRENT_CFLAGS)
AC_SUBST(LIBTORRENT_LIBS)

PKG_CHECK_MODULES(LIBNOTIFY, libnotify >= 0.4.2)
AC_SUBST(LIBNOTIFY_CFLAGS)
AC_SUBST(LIBNOTIFY_LIBS)

PKG_CHECK_MODULES(LIBCURL, libcurl >= 7.14.0)
AC_SUBST(LIBCURL_CFLAGS)
AC_SUBST(LIBCURL_LIBS)

PKG_CHECK_MODULES(DBUSGLIB, dbus-glib-1 >= 0.70)
AC_SUBST(DBUSGLIB_CFLAGS)
AC_SUBST(DBUSGLIB_LIBS)

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile plugins/Makefile lib/Makefile lib/linkage/Makefile plugins/notification/Makefile plugins/trayicon/Makefile  data/Makefile data/flags/Makefile)
