linkageincludedir = $(includedir)/linkage

linkageinclude_HEADERS = AlertManager.hh \
                        DetailsIface.hh \
                        MainIface.hh \
                        Plugin.hh \
                        PluginManager.hh \
                        SessionManager.hh \
                        SettingsManager.hh \
                        Torrent.hh \
                        TorrentManager.hh \
                        TorrentMenuIface.hh
