linkageincludedir = $(includedir)/linkage

linkageinclude_HEADERS = AlertManager.hh \
                        Plugin.hh \
                        PluginManager.hh \
                        SessionManager.hh \
                        SettingsManager.hh \
                        Torrent.hh \
                        TorrentManager.hh \
                        DbusManager.hh \
                        dbus-c.h \
                        RefCounter.hh
