linkageincludedir = $(includedir)/linkage-1.0/linkage

linkageinclude_HEADERS = AlertManager.hh \
	DbusManager.hh \
	Engine.hh \
	Plugin.hh \
	PluginManager.hh \
	SessionManager.hh \
	SettingsManager.hh \
	Torrent.hh \
	TorrentManager.hh \
	Interface.hh \
	Utils.hh

noinst_HEADERS = ucompose.hpp compose.hpp

