linkageincludedir = $(includedir)/linkage

linkageinclude_HEADERS = AlertManager.hh \
													DbusManager.hh \
													Engine.hh \
													Plugin.hh \
													PluginManager.hh \
													RefCounter.hh \
													SessionManager.hh \
													SettingsManager.hh \
													Torrent.hh \
													TorrentManager.hh \
													Utils.hh \
													WeakPtr.hh

noinst_HEADERS = dbus-c.h
