linkageincludedir = $(includedir)/linkage-1.0/linkage

linkageinclude_HEADERS = AlertManager.hh \
													DbusManager.hh \
													Engine.hh \
													Plugin.hh \
													PluginManager.hh \
													RefCounter.hh \
													SessionManager.hh \
													SettingsManager.hh \
													Torrent.hh \
													TorrentManager.hh \
													WeakPtr.hh \
													Interface.hh \
													dbus-c.h

noinst_HEADERS = Utils.hh ucompose.hpp

